--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="./cake.png">
 
     <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="./media.css">
 
 </head>
 <body>
