pre final thapa chng

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Munu..!!🎂Happy Birthday</title>
-    <link rel="icon" href="./cake.png">
+    <link rel="icon" href="./files/cake.png">
 
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./media.css">
@@ -50,16 +50,16 @@
         if (!value){
 
             startConfetti();
-            console.log("start")
-
             value=true;
 
         setTimeout(()=>{
             stopConfetti();
-            console.log("stop")
         }, 2000)
     }
     }
+
+
+    
 </script>
   
 </body>
